# desafio_dr_tis

./: .gitignore  CMakeLists.txt  README.md
include/: dicom.h  helpers.h  ui.h
src/: dicom.cpp  helpers.cpp  main.cpp  ui.cpp
